@@ -27,9 +27,8 @@ created.
 \fIhorizontal_margin\fP
 .TQ
 \fIvertical_margin\fP
-The windows' distances to screen edge in number of pixels. These options
-are integers. When a horizontal alignment of \fBcenter\fP is used, then
-\fIhorizontal_margin\fP is ignored.
+The windows' minimum distances to screen edge in number of pixels. These
+options are integers.
 .TP
 \fIouter_bevel\fP
 .TQ
